# SSHDockerPipeline

./: .dockerignore  .example.env.cmake  .gitignore  CMakeLists.txt  Dockerfile  README.md  action.yml  deployImage.sh  docker.hpp  getContainerId  getContainerId.cpp  main.cpp  main.js  templateWorkflow.yml  testbuild.sh
.github/workflows/: main.yml
ssh_server/: CMakeLists.txt  connection.cpp  connection.hpp  ssh_server.cpp  ssh_server.hpp  verify.cpp  verify.hpp
ssh_server/docker/: CMakeLists.txt  docker.cpp
validator/: CMakeLists.txt  validator.cpp  validator.hpp
